added Viewer UI elements and UI logic

--- a/briznichenkoProject/Info.plist
+++ b/briznichenkoProject/Info.plist
@@ -29,6 +29,8 @@
 	<string></string>
 	<key>UIMainStoryboardFile</key>
 	<string></string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
