--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@ ld generated
 build/
 DerivedData/
 
+### Xcode ###
+# Xcode
+#
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## Build generated
+build/
+DerivedData/
+
 ## Various settings
 *.pbxuser
 !default.pbxuser
@@ -17,6 +26,13 @@ xcuserdata/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
+
+### Xcode Patch ###
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
+/*.gcno
 
 ## Obj-C/Swift specific
 *.hmap
